parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON g_var funcs main
Rule 2     main -> MAIN L_P params R_P var_declaration L_B statements R_B
Rule 3     type -> INT
Rule 4     type -> FLOAT
Rule 5     type -> CHAR
Rule 6     g_var -> var_declaration
Rule 7     funcs -> function funcs
Rule 8     funcs -> empty
Rule 9     var_declaration -> VAR var1
Rule 10    var_declaration -> empty
Rule 11    var1 -> var_type dec_id var2 SEMICOLON var4
Rule 12    var2 -> COMA dec_id var3
Rule 13    var2 -> empty
Rule 14    var3 -> var2
Rule 15    var4 -> var1
Rule 16    var4 -> empty
Rule 17    dec_id -> ID dec_id1
Rule 18    dec_id1 -> L_SB CTE_I R_SB dec_id2
Rule 19    dec_id1 -> empty
Rule 20    dec_id2 -> L_SB CTE_I R_SB
Rule 21    dec_id2 -> empty
Rule 22    id -> ID id1
Rule 23    id1 -> L_SB expression R_SB id2
Rule 24    id1 -> empty
Rule 25    id2 -> L_SB expression R_SB
Rule 26    id2 -> empty
Rule 27    var_type -> type
Rule 28    function -> FUNC func_type ID register_func L_P params R_P var_declaration L_B statements R_B
Rule 29    register_func -> <empty>
Rule 30    func_type -> VOID
Rule 31    func_type -> type
Rule 32    params -> var_type param_type dec_id params1
Rule 33    params -> empty
Rule 34    param_type -> <empty>
Rule 35    params1 -> COMA params
Rule 36    params1 -> empty
Rule 37    statements -> statement statements
Rule 38    statements -> empty
Rule 39    statement -> assignation
Rule 40    statement -> call_func
Rule 41    statement -> return_func
Rule 42    statement -> read
Rule 43    statement -> write
Rule 44    statement -> decision_statement
Rule 45    statement -> repetition_statement
Rule 46    statement -> expression
Rule 47    assignation -> id id_quad EQUAL expression SEMICOLON
Rule 48    args -> args1
Rule 49    args -> empty
Rule 50    args1 -> expression args2
Rule 51    args2 -> COMA args1
Rule 52    args2 -> empty
Rule 53    call_func -> ID L_P args R_P SEMICOLON
Rule 54    call_func_exp -> ID L_P args R_P
Rule 55    return_func -> RETURN L_P expression R_P SEMICOLON
Rule 56    read -> READ L_P read_args R_P SEMICOLON
Rule 57    read_args -> expression read_args1
Rule 58    read_args1 -> COMA expression read_args1
Rule 59    read_args1 -> empty
Rule 60    write -> PRINT L_P write_args R_P SEMICOLON
Rule 61    write_args -> write_args2 write_args1
Rule 62    write_args1 -> COMA write_args2 write_args1
Rule 63    write_args1 -> empty
Rule 64    write_args2 -> expression
Rule 65    write_args2 -> CTE_STRING
Rule 66    decision_statement -> IF L_P expression R_P exp_type L_B statements R_B decision_statement1
Rule 67    decision_statement1 -> ELSE else_jump L_B statements R_B
Rule 68    decision_statement1 -> empty
Rule 69    exp_type -> <empty>
Rule 70    else_jump -> <empty>
Rule 71    repetition_statement -> while_statement
Rule 72    repetition_statement -> for_statement
Rule 73    for_statement -> FOR id id_quad EQUAL expression for_id TO breadcrumb expression exp_type do_statement
Rule 74    for_id -> <empty>
Rule 75    breadcrumb -> <empty>
Rule 76    while_statement -> WHILE L_P breadcrumb expression R_P exp_type do_statement
Rule 77    do_statement -> DO L_B statements R_B
Rule 78    expression -> texp generate_quad op1
Rule 79    texp -> gexp generate_quad op2
Rule 80    gexp -> mexp generate_quad op3aux
Rule 81    mexp -> term generate_quad op4aux
Rule 82    term -> fact generate_quad op5aux
Rule 83    generate_quad -> <empty>
Rule 84    fact -> id id_quad
Rule 85    fact -> call_func_exp
Rule 86    fact -> L_P add_fake expression R_P remove_fake
Rule 87    fact -> cte
Rule 88    add_fake -> <empty>
Rule 89    remove_fake -> <empty>
Rule 90    id_quad -> <empty>
Rule 91    cte -> CTE_F add_cte_float
Rule 92    cte -> CTE_I add_cte_int
Rule 93    cte -> CTE_CHAR add_cte_char
Rule 94    add_cte_int -> <empty>
Rule 95    add_cte_float -> <empty>
Rule 96    add_cte_char -> <empty>
Rule 97    op1 -> OR expression
Rule 98    op1 -> empty
Rule 99    op2 -> AND texp
Rule 100   op2 -> empty
Rule 101   op3 -> LESSTHAN
Rule 102   op3 -> LESSTHANEQ
Rule 103   op3 -> GREATERTHAN
Rule 104   op3 -> GREATERTHANEQ
Rule 105   op3 -> EQ
Rule 106   op3 -> DIFERENT
Rule 107   op3aux -> op3 mexp
Rule 108   op3aux -> empty
Rule 109   op4 -> PLUS
Rule 110   op4 -> MINUS
Rule 111   op4aux -> op4 mexp
Rule 112   op4aux -> empty
Rule 113   op5 -> MULT
Rule 114   op5 -> DIV
Rule 115   op5 -> MOD
Rule 116   op5aux -> op5 term
Rule 117   op5aux -> empty
Rule 118   empty -> <empty>

Terminals, with rules where they appear

AND                  : 99
CHAR                 : 5
COMA                 : 12 35 51 58 62
CTE_CHAR             : 93
CTE_F                : 91
CTE_I                : 18 20 92
CTE_STRING           : 65
DIFERENT             : 106
DIV                  : 114
DO                   : 77
ELSE                 : 67
EQ                   : 105
EQUAL                : 47 73
FLOAT                : 4
FOR                  : 73
FUNC                 : 28
GREATERTHAN          : 103
GREATERTHANEQ        : 104
ID                   : 1 17 22 28 53 54
IF                   : 66
INT                  : 3
LESSTHAN             : 101
LESSTHANEQ           : 102
L_B                  : 2 28 66 67 77
L_P                  : 2 28 53 54 55 56 60 66 76 86
L_SB                 : 18 20 23 25
MAIN                 : 2
MINUS                : 110
MOD                  : 115
MULT                 : 113
OR                   : 97
PLUS                 : 109
PRINT                : 60
PROGRAM              : 1
READ                 : 56
RETURN               : 55
R_B                  : 2 28 66 67 77
R_P                  : 2 28 53 54 55 56 60 66 76 86
R_SB                 : 18 20 23 25
SEMICOLON            : 1 11 47 53 55 56 60
TO                   : 73
VAR                  : 9
VOID                 : 30
WHILE                : 76
error                : 

Nonterminals, with rules where they appear

add_cte_char         : 93
add_cte_float        : 91
add_cte_int          : 92
add_fake             : 86
args                 : 53 54
args1                : 48 51
args2                : 50
assignation          : 39
breadcrumb           : 73 76
call_func            : 40
call_func_exp        : 85
cte                  : 87
dec_id               : 11 12 32
dec_id1              : 17
dec_id2              : 18
decision_statement   : 44
decision_statement1  : 66
do_statement         : 73 76
else_jump            : 67
empty                : 8 10 13 16 19 21 24 26 33 36 38 49 52 59 63 68 98 100 108 112 117
exp_type             : 66 73 76
expression           : 23 25 46 47 50 55 57 58 64 66 73 73 76 86 97
fact                 : 82
for_id               : 73
for_statement        : 72
func_type            : 28
funcs                : 1 7
function             : 7
g_var                : 1
generate_quad        : 78 79 80 81 82
gexp                 : 79
id                   : 47 73 84
id1                  : 22
id2                  : 23
id_quad              : 47 73 84
main                 : 1
mexp                 : 80 107 111
op1                  : 78
op2                  : 79
op3                  : 107
op3aux               : 80
op4                  : 111
op4aux               : 81
op5                  : 116
op5aux               : 82
param_type           : 32
params               : 2 28 35
params1              : 32
program              : 0
read                 : 42
read_args            : 56
read_args1           : 57 58
register_func        : 28
remove_fake          : 86
repetition_statement : 45
return_func          : 41
statement            : 37
statements           : 2 28 37 66 67 77
term                 : 81 116
texp                 : 78 99
type                 : 27 31
var1                 : 9 15
var2                 : 11 14
var3                 : 12
var4                 : 11
var_declaration      : 2 6 28
var_type             : 11 32
while_statement      : 71
write                : 43
write_args           : 60
write_args1          : 61 62
write_args2          : 61 62

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON g_var funcs main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON g_var funcs main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON g_var funcs main

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . g_var funcs main
    (6) g_var -> . var_declaration
    (9) var_declaration -> . VAR var1
    (10) var_declaration -> . empty
    (118) empty -> .

    VAR             shift and go to state 7
    FUNC            reduce using rule 118 (empty -> .)
    MAIN            reduce using rule 118 (empty -> .)

    g_var                          shift and go to state 5
    var_declaration                shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON g_var . funcs main
    (7) funcs -> . function funcs
    (8) funcs -> . empty
    (28) function -> . FUNC func_type ID register_func L_P params R_P var_declaration L_B statements R_B
    (118) empty -> .

    FUNC            shift and go to state 12
    MAIN            reduce using rule 118 (empty -> .)

    funcs                          shift and go to state 9
    function                       shift and go to state 10
    empty                          shift and go to state 11

state 6

    (6) g_var -> var_declaration .

    FUNC            reduce using rule 6 (g_var -> var_declaration .)
    MAIN            reduce using rule 6 (g_var -> var_declaration .)


state 7

    (9) var_declaration -> VAR . var1
    (11) var1 -> . var_type dec_id var2 SEMICOLON var4
    (27) var_type -> . type
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    var1                           shift and go to state 13
    var_type                       shift and go to state 14
    type                           shift and go to state 15

state 8

    (10) var_declaration -> empty .

    FUNC            reduce using rule 10 (var_declaration -> empty .)
    MAIN            reduce using rule 10 (var_declaration -> empty .)
    L_B             reduce using rule 10 (var_declaration -> empty .)


state 9

    (1) program -> PROGRAM ID SEMICOLON g_var funcs . main
    (2) main -> . MAIN L_P params R_P var_declaration L_B statements R_B

    MAIN            shift and go to state 20

    main                           shift and go to state 19

state 10

    (7) funcs -> function . funcs
    (7) funcs -> . function funcs
    (8) funcs -> . empty
    (28) function -> . FUNC func_type ID register_func L_P params R_P var_declaration L_B statements R_B
    (118) empty -> .

    FUNC            shift and go to state 12
    MAIN            reduce using rule 118 (empty -> .)

    function                       shift and go to state 10
    funcs                          shift and go to state 21
    empty                          shift and go to state 11

state 11

    (8) funcs -> empty .

    MAIN            reduce using rule 8 (funcs -> empty .)


state 12

    (28) function -> FUNC . func_type ID register_func L_P params R_P var_declaration L_B statements R_B
    (30) func_type -> . VOID
    (31) func_type -> . type
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR

    VOID            shift and go to state 23
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    func_type                      shift and go to state 22
    type                           shift and go to state 24

state 13

    (9) var_declaration -> VAR var1 .

    FUNC            reduce using rule 9 (var_declaration -> VAR var1 .)
    MAIN            reduce using rule 9 (var_declaration -> VAR var1 .)
    L_B             reduce using rule 9 (var_declaration -> VAR var1 .)


state 14

    (11) var1 -> var_type . dec_id var2 SEMICOLON var4
    (17) dec_id -> . ID dec_id1

    ID              shift and go to state 26

    dec_id                         shift and go to state 25

state 15

    (27) var_type -> type .

    ID              reduce using rule 27 (var_type -> type .)


state 16

    (3) type -> INT .

    ID              reduce using rule 3 (type -> INT .)


state 17

    (4) type -> FLOAT .

    ID              reduce using rule 4 (type -> FLOAT .)


state 18

    (5) type -> CHAR .

    ID              reduce using rule 5 (type -> CHAR .)


state 19

    (1) program -> PROGRAM ID SEMICOLON g_var funcs main .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON g_var funcs main .)


state 20

    (2) main -> MAIN . L_P params R_P var_declaration L_B statements R_B

    L_P             shift and go to state 27


state 21

    (7) funcs -> function funcs .

    MAIN            reduce using rule 7 (funcs -> function funcs .)


state 22

    (28) function -> FUNC func_type . ID register_func L_P params R_P var_declaration L_B statements R_B

    ID              shift and go to state 28


state 23

    (30) func_type -> VOID .

    ID              reduce using rule 30 (func_type -> VOID .)


state 24

    (31) func_type -> type .

    ID              reduce using rule 31 (func_type -> type .)


state 25

    (11) var1 -> var_type dec_id . var2 SEMICOLON var4
    (12) var2 -> . COMA dec_id var3
    (13) var2 -> . empty
    (118) empty -> .

    COMA            shift and go to state 30
    SEMICOLON       reduce using rule 118 (empty -> .)

    var2                           shift and go to state 29
    empty                          shift and go to state 31

state 26

    (17) dec_id -> ID . dec_id1
    (18) dec_id1 -> . L_SB CTE_I R_SB dec_id2
    (19) dec_id1 -> . empty
    (118) empty -> .

    L_SB            shift and go to state 33
    COMA            reduce using rule 118 (empty -> .)
    SEMICOLON       reduce using rule 118 (empty -> .)
    R_P             reduce using rule 118 (empty -> .)

    dec_id1                        shift and go to state 32
    empty                          shift and go to state 34

state 27

    (2) main -> MAIN L_P . params R_P var_declaration L_B statements R_B
    (32) params -> . var_type param_type dec_id params1
    (33) params -> . empty
    (27) var_type -> . type
    (118) empty -> .
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR

    R_P             reduce using rule 118 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    params                         shift and go to state 35
    var_type                       shift and go to state 36
    empty                          shift and go to state 37
    type                           shift and go to state 15

state 28

    (28) function -> FUNC func_type ID . register_func L_P params R_P var_declaration L_B statements R_B
    (29) register_func -> .

    L_P             reduce using rule 29 (register_func -> .)

    register_func                  shift and go to state 38

state 29

    (11) var1 -> var_type dec_id var2 . SEMICOLON var4

    SEMICOLON       shift and go to state 39


state 30

    (12) var2 -> COMA . dec_id var3
    (17) dec_id -> . ID dec_id1

    ID              shift and go to state 26

    dec_id                         shift and go to state 40

state 31

    (13) var2 -> empty .

    SEMICOLON       reduce using rule 13 (var2 -> empty .)


state 32

    (17) dec_id -> ID dec_id1 .

    COMA            reduce using rule 17 (dec_id -> ID dec_id1 .)
    SEMICOLON       reduce using rule 17 (dec_id -> ID dec_id1 .)
    R_P             reduce using rule 17 (dec_id -> ID dec_id1 .)


state 33

    (18) dec_id1 -> L_SB . CTE_I R_SB dec_id2

    CTE_I           shift and go to state 41


state 34

    (19) dec_id1 -> empty .

    COMA            reduce using rule 19 (dec_id1 -> empty .)
    SEMICOLON       reduce using rule 19 (dec_id1 -> empty .)
    R_P             reduce using rule 19 (dec_id1 -> empty .)


state 35

    (2) main -> MAIN L_P params . R_P var_declaration L_B statements R_B

    R_P             shift and go to state 42


state 36

    (32) params -> var_type . param_type dec_id params1
    (34) param_type -> .

    ID              reduce using rule 34 (param_type -> .)

    param_type                     shift and go to state 43

state 37

    (33) params -> empty .

    R_P             reduce using rule 33 (params -> empty .)


state 38

    (28) function -> FUNC func_type ID register_func . L_P params R_P var_declaration L_B statements R_B

    L_P             shift and go to state 44


state 39

    (11) var1 -> var_type dec_id var2 SEMICOLON . var4
    (15) var4 -> . var1
    (16) var4 -> . empty
    (11) var1 -> . var_type dec_id var2 SEMICOLON var4
    (118) empty -> .
    (27) var_type -> . type
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR

    FUNC            reduce using rule 118 (empty -> .)
    MAIN            reduce using rule 118 (empty -> .)
    L_B             reduce using rule 118 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    var_type                       shift and go to state 14
    var4                           shift and go to state 45
    var1                           shift and go to state 46
    empty                          shift and go to state 47
    type                           shift and go to state 15

state 40

    (12) var2 -> COMA dec_id . var3
    (14) var3 -> . var2
    (12) var2 -> . COMA dec_id var3
    (13) var2 -> . empty
    (118) empty -> .

    COMA            shift and go to state 30
    SEMICOLON       reduce using rule 118 (empty -> .)

    var3                           shift and go to state 48
    var2                           shift and go to state 49
    empty                          shift and go to state 31

state 41

    (18) dec_id1 -> L_SB CTE_I . R_SB dec_id2

    R_SB            shift and go to state 50


state 42

    (2) main -> MAIN L_P params R_P . var_declaration L_B statements R_B
    (9) var_declaration -> . VAR var1
    (10) var_declaration -> . empty
    (118) empty -> .

    VAR             shift and go to state 7
    L_B             reduce using rule 118 (empty -> .)

    var_declaration                shift and go to state 51
    empty                          shift and go to state 8

state 43

    (32) params -> var_type param_type . dec_id params1
    (17) dec_id -> . ID dec_id1

    ID              shift and go to state 26

    dec_id                         shift and go to state 52

state 44

    (28) function -> FUNC func_type ID register_func L_P . params R_P var_declaration L_B statements R_B
    (32) params -> . var_type param_type dec_id params1
    (33) params -> . empty
    (27) var_type -> . type
    (118) empty -> .
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR

    R_P             reduce using rule 118 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    params                         shift and go to state 53
    var_type                       shift and go to state 36
    empty                          shift and go to state 37
    type                           shift and go to state 15

state 45

    (11) var1 -> var_type dec_id var2 SEMICOLON var4 .

    FUNC            reduce using rule 11 (var1 -> var_type dec_id var2 SEMICOLON var4 .)
    MAIN            reduce using rule 11 (var1 -> var_type dec_id var2 SEMICOLON var4 .)
    L_B             reduce using rule 11 (var1 -> var_type dec_id var2 SEMICOLON var4 .)


state 46

    (15) var4 -> var1 .

    FUNC            reduce using rule 15 (var4 -> var1 .)
    MAIN            reduce using rule 15 (var4 -> var1 .)
    L_B             reduce using rule 15 (var4 -> var1 .)


state 47

    (16) var4 -> empty .

    FUNC            reduce using rule 16 (var4 -> empty .)
    MAIN            reduce using rule 16 (var4 -> empty .)
    L_B             reduce using rule 16 (var4 -> empty .)


state 48

    (12) var2 -> COMA dec_id var3 .

    SEMICOLON       reduce using rule 12 (var2 -> COMA dec_id var3 .)


state 49

    (14) var3 -> var2 .

    SEMICOLON       reduce using rule 14 (var3 -> var2 .)


state 50

    (18) dec_id1 -> L_SB CTE_I R_SB . dec_id2
    (20) dec_id2 -> . L_SB CTE_I R_SB
    (21) dec_id2 -> . empty
    (118) empty -> .

    L_SB            shift and go to state 54
    COMA            reduce using rule 118 (empty -> .)
    SEMICOLON       reduce using rule 118 (empty -> .)
    R_P             reduce using rule 118 (empty -> .)

    dec_id2                        shift and go to state 55
    empty                          shift and go to state 56

state 51

    (2) main -> MAIN L_P params R_P var_declaration . L_B statements R_B

    L_B             shift and go to state 57


state 52

    (32) params -> var_type param_type dec_id . params1
    (35) params1 -> . COMA params
    (36) params1 -> . empty
    (118) empty -> .

    COMA            shift and go to state 59
    R_P             reduce using rule 118 (empty -> .)

    params1                        shift and go to state 58
    empty                          shift and go to state 60

state 53

    (28) function -> FUNC func_type ID register_func L_P params . R_P var_declaration L_B statements R_B

    R_P             shift and go to state 61


state 54

    (20) dec_id2 -> L_SB . CTE_I R_SB

    CTE_I           shift and go to state 62


state 55

    (18) dec_id1 -> L_SB CTE_I R_SB dec_id2 .

    COMA            reduce using rule 18 (dec_id1 -> L_SB CTE_I R_SB dec_id2 .)
    SEMICOLON       reduce using rule 18 (dec_id1 -> L_SB CTE_I R_SB dec_id2 .)
    R_P             reduce using rule 18 (dec_id1 -> L_SB CTE_I R_SB dec_id2 .)


state 56

    (21) dec_id2 -> empty .

    COMA            reduce using rule 21 (dec_id2 -> empty .)
    SEMICOLON       reduce using rule 21 (dec_id2 -> empty .)
    R_P             reduce using rule 21 (dec_id2 -> empty .)


state 57

    (2) main -> MAIN L_P params R_P var_declaration L_B . statements R_B
    (37) statements -> . statement statements
    (38) statements -> . empty
    (39) statement -> . assignation
    (40) statement -> . call_func
    (41) statement -> . return_func
    (42) statement -> . read
    (43) statement -> . write
    (44) statement -> . decision_statement
    (45) statement -> . repetition_statement
    (46) statement -> . expression
    (118) empty -> .
    (47) assignation -> . id id_quad EQUAL expression SEMICOLON
    (53) call_func -> . ID L_P args R_P SEMICOLON
    (55) return_func -> . RETURN L_P expression R_P SEMICOLON
    (56) read -> . READ L_P read_args R_P SEMICOLON
    (60) write -> . PRINT L_P write_args R_P SEMICOLON
    (66) decision_statement -> . IF L_P expression R_P exp_type L_B statements R_B decision_statement1
    (71) repetition_statement -> . while_statement
    (72) repetition_statement -> . for_statement
    (78) expression -> . texp generate_quad op1
    (22) id -> . ID id1
    (76) while_statement -> . WHILE L_P breadcrumb expression R_P exp_type do_statement
    (73) for_statement -> . FOR id id_quad EQUAL expression for_id TO breadcrumb expression exp_type do_statement
    (79) texp -> . gexp generate_quad op2
    (80) gexp -> . mexp generate_quad op3aux
    (81) mexp -> . term generate_quad op4aux
    (82) term -> . fact generate_quad op5aux
    (84) fact -> . id id_quad
    (85) fact -> . call_func_exp
    (86) fact -> . L_P add_fake expression R_P remove_fake
    (87) fact -> . cte
    (54) call_func_exp -> . ID L_P args R_P
    (91) cte -> . CTE_F add_cte_float
    (92) cte -> . CTE_I add_cte_int
    (93) cte -> . CTE_CHAR add_cte_char

    R_B             reduce using rule 118 (empty -> .)
    ID              shift and go to state 76
    RETURN          shift and go to state 77
    READ            shift and go to state 78
    PRINT           shift and go to state 79
    IF              shift and go to state 80
    WHILE           shift and go to state 84
    FOR             shift and go to state 85
    L_P             shift and go to state 63
    CTE_F           shift and go to state 92
    CTE_I           shift and go to state 93
    CTE_CHAR        shift and go to state 94

    statements                     shift and go to state 64
    statement                      shift and go to state 65
    empty                          shift and go to state 66
    assignation                    shift and go to state 67
    call_func                      shift and go to state 68
    return_func                    shift and go to state 69
    read                           shift and go to state 70
    write                          shift and go to state 71
    decision_statement             shift and go to state 72
    repetition_statement           shift and go to state 73
    expression                     shift and go to state 74
    id                             shift and go to state 75
    while_statement                shift and go to state 81
    for_statement                  shift and go to state 82
    texp                           shift and go to state 83
    gexp                           shift and go to state 86
    mexp                           shift and go to state 87
    term                           shift and go to state 88
    fact                           shift and go to state 89
    call_func_exp                  shift and go to state 90
    cte                            shift and go to state 91

state 58

    (32) params -> var_type param_type dec_id params1 .

    R_P             reduce using rule 32 (params -> var_type param_type dec_id params1 .)


state 59

    (35) params1 -> COMA . params
    (32) params -> . var_type param_type dec_id params1
    (33) params -> . empty
    (27) var_type -> . type
    (118) empty -> .
    (3) type -> . INT
    (4) type -> . FLOAT
    (5) type -> . CHAR

    R_P             reduce using rule 118 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    params                         shift and go to state 95
    var_type                       shift and go to state 36
    empty                          shift and go to state 37
    type                           shift and go to state 15

state 60

    (36) params1 -> empty .

    R_P             reduce using rule 36 (params1 -> empty .)


state 61

    (28) function -> FUNC func_type ID register_func L_P params R_P . var_declaration L_B statements R_B
    (9) var_declaration -> . VAR var1
    (10) var_declaration -> . empty
    (118) empty -> .

    VAR             shift and go to state 7
    L_B             reduce using rule 118 (empty -> .)

    var_declaration                shift and go to state 96
    empty                          shift and go to state 8

state 62

    (20) dec_id2 -> L_SB CTE_I . R_SB

    R_SB            shift and go to state 97


state 63

    (86) fact -> L_P . add_fake expression R_P remove_fake
    (88) add_fake -> .

    L_P             reduce using rule 88 (add_fake -> .)
    ID              reduce using rule 88 (add_fake -> .)
    CTE_F           reduce using rule 88 (add_fake -> .)
    CTE_I           reduce using rule 88 (add_fake -> .)
    CTE_CHAR        reduce using rule 88 (add_fake -> .)

    add_fake                       shift and go to state 98

state 64

    (2) main -> MAIN L_P params R_P var_declaration L_B statements . R_B

    R_B             shift and go to state 99


state 65

    (37) statements -> statement . statements
    (37) statements -> . statement statements
    (38) statements -> . empty
    (39) statement -> . assignation
    (40) statement -> . call_func
    (41) statement -> . return_func
    (42) statement -> . read
    (43) statement -> . write
    (44) statement -> . decision_statement
    (45) statement -> . repetition_statement
    (46) statement -> . expression
    (118) empty -> .
    (47) assignation -> . id id_quad EQUAL expression SEMICOLON
    (53) call_func -> . ID L_P args R_P SEMICOLON
    (55) return_func -> . RETURN L_P expression R_P SEMICOLON
    (56) read -> . READ L_P read_args R_P SEMICOLON
    (60) write -> . PRINT L_P write_args R_P SEMICOLON
    (66) decision_statement -> . IF L_P expression R_P exp_type L_B statements R_B decision_statement1
    (71) repetition_statement -> . while_statement
    (72) repetition_statement -> . for_statement
    (78) expression -> . texp generate_quad op1
    (22) id -> . ID id1
    (76) while_statement -> . WHILE L_P breadcrumb expression R_P exp_type do_statement
    (73) for_statement -> . FOR id id_quad EQUAL expression for_id TO breadcrumb expression exp_type do_statement
    (79) texp -> . gexp generate_quad op2
    (80) gexp -> . mexp generate_quad op3aux
    (81) mexp -> . term generate_quad op4aux
    (82) term -> . fact generate_quad op5aux
    (84) fact -> . id id_quad
    (85) fact -> . call_func_exp
    (86) fact -> . L_P add_fake expression R_P remove_fake
    (87) fact -> . cte
    (54) call_func_exp -> . ID L_P args R_P
    (91) cte -> . CTE_F add_cte_float
    (92) cte -> . CTE_I add_cte_int
    (93) cte -> . CTE_CHAR add_cte_char

    R_B             reduce using rule 118 (empty -> .)
    ID              shift and go to state 76
    RETURN          shift and go to state 77
    READ            shift and go to state 78
    PRINT           shift and go to state 79
    IF              shift and go to state 80
    WHILE           shift and go to state 84
    FOR             shift and go to state 85
    L_P             shift and go to state 63
    CTE_F           shift and go to state 92
    CTE_I           shift and go to state 93
    CTE_CHAR        shift and go to state 94

    statement                      shift and go to state 65
    statements                     shift and go to state 100
    empty                          shift and go to state 66
    assignation                    shift and go to state 67
    call_func                      shift and go to state 68
    return_func                    shift and go to state 69
    read                           shift and go to state 70
    write                          shift and go to state 71
    decision_statement             shift and go to state 72
    repetition_statement           shift and go to state 73
    expression                     shift and go to state 74
    id                             shift and go to state 75
    while_statement                shift and go to state 81
    for_statement                  shift and go to state 82
    texp                           shift and go to state 83
    gexp                           shift and go to state 86
    mexp                           shift and go to state 87
    term                           shift and go to state 88
    fact                           shift and go to state 89
    call_func_exp                  shift and go to state 90
    cte                            shift and go to state 91

state 66

    (38) statements -> empty .

    R_B             reduce using rule 38 (statements -> empty .)


state 67

    (39) statement -> assignation .

    ID              reduce using rule 39 (statement -> assignation .)
    RETURN          reduce using rule 39 (statement -> assignation .)
    READ            reduce using rule 39 (statement -> assignation .)
    PRINT           reduce using rule 39 (statement -> assignation .)
    IF              reduce using rule 39 (statement -> assignation .)
    WHILE           reduce using rule 39 (statement -> assignation .)
    FOR             reduce using rule 39 (statement -> assignation .)
    L_P             reduce using rule 39 (statement -> assignation .)
    CTE_F           reduce using rule 39 (statement -> assignation .)
    CTE_I           reduce using rule 39 (statement -> assignation .)
    CTE_CHAR        reduce using rule 39 (statement -> assignation .)
    R_B             reduce using rule 39 (statement -> assignation .)


state 68

    (40) statement -> call_func .

    ID              reduce using rule 40 (statement -> call_func .)
    RETURN          reduce using rule 40 (statement -> call_func .)
    READ            reduce using rule 40 (statement -> call_func .)
    PRINT           reduce using rule 40 (statement -> call_func .)
    IF              reduce using rule 40 (statement -> call_func .)
    WHILE           reduce using rule 40 (statement -> call_func .)
    FOR             reduce using rule 40 (statement -> call_func .)
    L_P             reduce using rule 40 (statement -> call_func .)
    CTE_F           reduce using rule 40 (statement -> call_func .)
    CTE_I           reduce using rule 40 (statement -> call_func .)
    CTE_CHAR        reduce using rule 40 (statement -> call_func .)
    R_B             reduce using rule 40 (statement -> call_func .)


state 69

    (41) statement -> return_func .

    ID              reduce using rule 41 (statement -> return_func .)
    RETURN          reduce using rule 41 (statement -> return_func .)
    READ            reduce using rule 41 (statement -> return_func .)
    PRINT           reduce using rule 41 (statement -> return_func .)
    IF              reduce using rule 41 (statement -> return_func .)
    WHILE           reduce using rule 41 (statement -> return_func .)
    FOR             reduce using rule 41 (statement -> return_func .)
    L_P             reduce using rule 41 (statement -> return_func .)
    CTE_F           reduce using rule 41 (statement -> return_func .)
    CTE_I           reduce using rule 41 (statement -> return_func .)
    CTE_CHAR        reduce using rule 41 (statement -> return_func .)
    R_B             reduce using rule 41 (statement -> return_func .)


state 70

    (42) statement -> read .

    ID              reduce using rule 42 (statement -> read .)
    RETURN          reduce using rule 42 (statement -> read .)
    READ            reduce using rule 42 (statement -> read .)
    PRINT           reduce using rule 42 (statement -> read .)
    IF              reduce using rule 42 (statement -> read .)
    WHILE           reduce using rule 42 (statement -> read .)
    FOR             reduce using rule 42 (statement -> read .)
    L_P             reduce using rule 42 (statement -> read .)
    CTE_F           reduce using rule 42 (statement -> read .)
    CTE_I           reduce using rule 42 (statement -> read .)
    CTE_CHAR        reduce using rule 42 (statement -> read .)
    R_B             reduce using rule 42 (statement -> read .)


state 71

    (43) statement -> write .

    ID              reduce using rule 43 (statement -> write .)
    RETURN          reduce using rule 43 (statement -> write .)
    READ            reduce using rule 43 (statement -> write .)
    PRINT           reduce using rule 43 (statement -> write .)
    IF              reduce using rule 43 (statement -> write .)
    WHILE           reduce using rule 43 (statement -> write .)
    FOR             reduce using rule 43 (statement -> write .)
    L_P             reduce using rule 43 (statement -> write .)
    CTE_F           reduce using rule 43 (statement -> write .)
    CTE_I           reduce using rule 43 (statement -> write .)
    CTE_CHAR        reduce using rule 43 (statement -> write .)
    R_B             reduce using rule 43 (statement -> write .)


state 72

    (44) statement -> decision_statement .

    ID              reduce using rule 44 (statement -> decision_statement .)
    RETURN          reduce using rule 44 (statement -> decision_statement .)
    READ            reduce using rule 44 (statement -> decision_statement .)
    PRINT           reduce using rule 44 (statement -> decision_statement .)
    IF              reduce using rule 44 (statement -> decision_statement .)
    WHILE           reduce using rule 44 (statement -> decision_statement .)
    FOR             reduce using rule 44 (statement -> decision_statement .)
    L_P             reduce using rule 44 (statement -> decision_statement .)
    CTE_F           reduce using rule 44 (statement -> decision_statement .)
    CTE_I           reduce using rule 44 (statement -> decision_statement .)
    CTE_CHAR        reduce using rule 44 (statement -> decision_statement .)
    R_B             reduce using rule 44 (statement -> decision_statement .)


state 73

    (45) statement -> repetition_statement .
